k8s/ingress/deployment-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mythica-gke-public-ip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      containers:
      - name: ingress-controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.0.0
        args:
        - /nginx-ingress-controller
        - --publish-service=ingress/ingress-controller
        - --election-id=ingress-controller-leader
        - --ingress-class=nginx
        - --configmap=ingress/ingress-controller-config
