k8s/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-gateway
  namespace: ingress
spec:
  gatewayClassName: gke-l7-gxlb
  addresses:
    - type: NamedAddress
      value: mythica-gke-global-gateway-address
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: &namespaceSelector
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - web
                  - dex
                  - api
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
         - name: mythica-ai-cert
      allowedRoutes:
        namespaces: *namespaceSelector
